--- a/source/scss/general/button.scss
+++ b/source/scss/general/button.scss
@@ -1,37 +1,15 @@
 .button {
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 20px;
-  color: $charcoal;
+  font-family: $font-stack;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  color: $color-primary;
   text-decoration: none;
   text-transform: uppercase;
-  background-color: $white;
-  border: 2px solid $charcoal;
+  background-color: $color-transparent;
+  border: 1px solid $color-neutral;
   box-sizing: border-box;
-  padding: 14px;
   cursor: pointer;
   display: block;
   text-align: center;
-
-  &:hover {
-    color: $white;
-    background-color: $charcoal;
-  }
-
-  &:active {
-    color: rgba($white, 0.3);
-    background-color: $charcoal;
-  }
-
-  &:focus-visible {
-    outline: 2px solid $downy;
-    outline-offset: 2px;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.3;
-    border-color: rgba($charcoal, 0.3);
-  }
 }
