--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,3 +3,13 @@
 @import "general/fonts.scss";
 @import "general/button";
 @import "general/container.scss";
+@import "general/mixins.scss";
+
+@import "blocks/tabs.scss";
+@import "blocks/data-tabs.scss";
+@import "blocks/page.scss";
+@import "blocks/custom-toggle.scss";
+@import "blocks/dropdown.scss";
+@import "blocks/form.scss";
+@import "blocks/btn.scss";
+@import "blocks/option-name-block.scss";
